CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
SET(CMAKE_SUPPRESS_REGENERATION true)

PROJECT(PolarTracer)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)
FIND_PACKAGE(Vulkan REQUIRED FATAL_ERROR)
ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ADD_EXECUTABLE(PolarTracer ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp)
TARGET_INCLUDE_DIRECTORIES(PolarTracer PUBLIC ${Vulkan_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(PolarTracer PUBLIC ${Vulkan_LIBRARIES})
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT PolarTracer)